# NeoSurv

./: .gitignore  BUGS.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md
NeoSurv/: .gitignore  Cargo.toml
NeoSurv/assets/shaders/: model.wgsl
NeoSurv/docs/: ARCH_SAVELOAD_VOXEL.md  MILESTONE_1.md  OBJ_MODELS.md  TECH_STACK.md
NeoSurv/legacy/cpp-bootstrap/: CMakeLists.txt
NeoSurv/legacy/cpp-bootstrap/src/engine/: Application.hpp
NeoSurv/legacy/rust-workspace-v1/: ARCHITECTURE.md
NeoSurv/legacy/rust-workspace-v1/crates/engine/src/: app.rs  config.rs
NeoSurv/legacy/rust-workspace-v1/crates/sandbox/src/: main.rs
NeoSurv/src/: chat.rs  commands.rs  config.rs  engine.rs  hud.rs  inventory.rs  main.rs  menu.rs  player.rs  ui.rs
NeoSurv/src/editor/: gui.rs
NeoSurv/src/game/: model.rs
NeoSurv/src/gameplay/: damage.rs  enemies.rs  hit_detection.rs  hitscan.rs  mod.rs  projectiles.rs  viewmodel.rs  weapons.rs
NeoSurv/src/input/: handler.rs
NeoSurv/src/renderer/: backend_trait.rs  mod.rs  vulkan.rs
NeoSurv/src/world/: mod.rs  save.rs  state.rs
NeoSurv/src/world/voxel/: block.rs  chunk.rs  culling.rs  generation.rs  meshing.rs  mod.rs  pipeline.rs  raycast.rs  runtime.rs
game-engine/: .gitignore  Cargo.toml  Config.toml  README.md
game-engine/assets/shaders/: clear.wgsl  model.wgsl  voxel.wgsl
game-engine/docs/: BUG_FIX_STRATEGY.md  STEP_6_SAVE_LOAD.md  STEP_7_VOXEL_CHUNKS.md  STEP_8_VOXEL_RENDERING_ARCH.md  STEP_9_PERF_ARCH.md
game-engine/legacy/cpp-bootstrap/src/: main.cpp
game-engine/legacy/cpp-bootstrap/src/engine/: Application.cpp
game-engine/legacy/rust-workspace-v1/: Cargo.toml
game-engine/legacy/rust-workspace-v1/crates/engine/: Cargo.toml
game-engine/legacy/rust-workspace-v1/crates/engine/src/: ecs.rs  editor.rs  lib.rs  scene.rs  voxel.rs  worldgen.rs
game-engine/legacy/rust-workspace-v1/crates/engine/src/render/: mod.rs
game-engine/legacy/rust-workspace-v1/crates/sandbox/: Cargo.toml
game-engine/scripts/: sync_to_windows.sh
game-engine/src/: engine.rs  main.rs  player.rs
game-engine/src/ecs/: components.rs  resources.rs  systems.rs
game-engine/src/editor/: gui.rs
game-engine/src/input/: handler.rs
game-engine/src/renderer/: backend_trait.rs  mod.rs  opengl.rs
game-engine/src/world/: camera.rs  mod.rs  save_load.rs  scene.rs  scene_manager.rs  scene_sync.rs
game-engine/src/world/voxel/: block.rs  chunk.rs  generation.rs  meshing.rs  pipeline.rs  raycast.rs  runtime.rs
