[package]
name = "tokenburner"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Tokenburner game engine foundation (wgpu + winit)"

[dependencies]
anyhow = "1"
wgpu = { version = "28", features = ["vulkan", "gles", "wgsl"] }
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
noise = "0.9"
tobj = "4"
image = { version = "0.25", default-features = false, features = ["png"] }
egui = { version = "0.33", optional = true }
eframe = { version = "0.33", default-features = false, features = ["wgpu", "x11", "wayland"], optional = true }

[features]
default = []
editor = ["dep:egui", "dep:eframe"]
