[package]
name = "engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
ron.workspace = true
glam.workspace = true
legion.workspace = true
noise.workspace = true
rayon.workspace = true
winit.workspace = true
egui.workspace = true
eframe.workspace = true
wgpu.workspace = true
